[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["kingsword09 <kingsword09@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
config = "0.13"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = "0.4.15"
env_logger = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
once_cell = "1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "3"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.19.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "2.0.3"
anyhow = "1.0.93"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
serde_json = "1.0.133"

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
  "runtime-async-std",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
fake = "3.0.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
linkify = "0.10.0"
serde_urlencoded = "0.7.1"
